# ganitagraph

./: README.md
config/: CMakeLists.txt  build.sh
src/cpp/: GanitaBigraph.cpp  GanitaBuffer.cpp  GanitaEdge.cpp  GanitaFormatter.cpp  GanitaFormatter.hpp  GanitaGraph.cpp  GanitaGraph.hpp  GanitaGraphCluster.cpp  GanitaGraphFile.cpp  GanitaGraphList.cpp  GanitaGraphStage.cpp  GanitaNode.cpp  GanitaNode.hpp  GanitaTrace.cpp
src/drivers/: ganitaGraph.cc  gg1.cc  gg2.cc  gg3.cc
src/include/: GanitaEdge.hpp  GanitaGraph.hpp  GanitaTrace.hpp
src/include/ganita/graph/: GanitaBigraph.hpp  GanitaBuffer.hpp  GanitaEdge.hpp  GanitaFormatter.hpp  GanitaGraph.hpp  GanitaGraphCluster.hpp  GanitaGraphFile.hpp  GanitaGraphList.hpp  GanitaGraphStage.hpp  GanitaNode.hpp  GanitaTrace.hpp
